--- a/templates/snippets/index_head_scripts.jade
+++ b/templates/snippets/index_head_scripts.jade
@@ -80,7 +80,7 @@ if (typeof account.website.theme !== 'undefined' && typeof account.website.theme
             color: #{account.website.themeOverrides.styles.primaryTextColor};
         }
 
-         .ssb-theme-#{account.website.theme.handle} .ssb-section-layout.ssb-page-section-layout-header , .ssb-theme-#{account.website.theme.handle} .ssb-page-section-layout-header {
+        .ssb-theme-{{vm.state.website.theme.handle}} .ssb-page-section-layout-header .navigation-logo, .ssb-theme-#{account.website.theme.handle} .ssb-section-layout.ssb-page-section-layout-header , .ssb-theme-#{account.website.theme.handle} .ssb-page-section-layout-header {
             background-color: #{account.website.themeOverrides.styles.headerBackgroundColor};
             color: #{account.website.themeOverrides.styles.headerTextColor};
         }
