--- a/public/admin/assets/js/ssb-site-builder/ssb-components/ssb-form-builder/ssb-form-builder.component.html
+++ b/public/admin/assets/js/ssb-site-builder/ssb-components/ssb-form-builder/ssb-form-builder.component.html
@@ -27,7 +27,7 @@
 									</div>
 									<div class="form-checkbox-label">
                                         <span class="required req-opt-in">*</span>
-										<div class="lable-padding" elem ng-model="vm.component.optInText"></div>
+										<div class="label-padding" elem ng-model="vm.component.optInText"></div>
 									</div>
 								</div>
                                 <div class="clearfix mb15 visible-xs"></div>
