--- a/public/admin/assets/js/ssb-site-builder/ssb-components/ssb-form-builder/ssb-form-builder.v3.component.html
+++ b/public/admin/assets/js/ssb-site-builder/ssb-components/ssb-form-builder/ssb-form-builder.v3.component.html
@@ -54,7 +54,7 @@
                                         </div>
                                         <div class="form-checkbox-label">
                                            <span class="required req-opt-in">*</span>
-                                            <div  class="lable-padding" elem ng-model="vm.component.optInText">
+                                            <div  class="label-padding" elem ng-model="vm.component.optInText">
                                             </div>
                                         </div>
                                     </div>
