--- a/public/admin/assets/js/ssb-site-builder/ssb-site-builder.component.html
+++ b/public/admin/assets/js/ssb-site-builder/ssb-site-builder.component.html
@@ -43,7 +43,7 @@
     color: {{vm.state.website.themeOverrides.styles.primaryTextColor}};
 }
 
-.ssb-theme-{{vm.state.website.theme.handle}} .ssb-page-section-layout-header, .ssb-theme-{{vm.state.website.theme.handle}} .ssb-page-section-layout-header pre {
+.ssb-theme-{{vm.state.website.theme.handle}} .ssb-page-section-layout-header .navigation-logo, .ssb-theme-{{vm.state.website.theme.handle}} .ssb-page-section-layout-header, .ssb-theme-{{vm.state.website.theme.handle}} .ssb-page-section-layout-header pre {
     background-color: {{vm.state.page.styles.headerBackgroundColor || vm.state.website.themeOverrides.styles.headerBackgroundColor}};
     color: {{vm.state.website.themeOverrides.styles.headerTextColor}};
 }
