--- a/public/less/sections/contact-detail.less
+++ b/public/less/sections/contact-detail.less
@@ -46,6 +46,9 @@
 }
 
 contact-details-component{
+    .loading-contacts{
+        position: relative;
+    }
     .contact-details-left-pane{
         .contact-profile-stats{
             margin-left: -15px;
