--- a/public/admin/assets/js/contact-details/contact-details.component.html
+++ b/public/admin/assets/js/contact-details/contact-details.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid container-fullw">
-    <div class="loading-editor" ct-fullheight="window" data-ct-fullheight-exclusion="header" ng-if="vm.uiState.loading">
+    <div class="loading-contacts" ct-fullheight="window" data-ct-fullheight-exclusion="header" ng-if="vm.uiState.loading">
         <div class="col-xs-12">
             <h1 class="center"><span class="fa fa-spinner fa-spin"></span><br><br>
              Loading...
@@ -364,7 +364,42 @@
         </div>
         <!-- contact timeline/notes pane -->
         <div class="col-xs-12 col-sm-6 contact-details-right-pane">
-            Contact activity goes here
+            <div class="panel panel-white" id="notes">
+                <div class="panel-heading border-light">
+                    <h4 class="panel-title">Contact <span class="text-bold">Notes</span></h4>
+                    <ct-paneltool class="panel-tools" tool-collapse="tool-collapse"></ct-paneltool>
+                </div>
+                <div class="panel-wrapper customer-detail" collapse="notes" ng-init="notes=false">
+                    <div class="panel-body no-padding">
+                        <ul class="notes panel-scroll" perfect-scrollbar wheel-propagation="false" suppress-scroll-x="true">
+                            <li ng-repeat="note in vm.state.contact.notes">
+                                <div class="col-xs-2">
+                                    <img src="{{note.user_profile_photo.url ? note.user_profile_photo.url : note.user_profile_photo ? note.user_profile_photo : '/admin/assets/images/default-user.png'}}" class="img-circle pull-left" width="32">
+                                </div>
+                                <div class="col-xs-10">
+                                    <span class="text-small block text-light">{{note.user.first}} {{note.user.last}} <span class="pull-right">{{note.date | date:'dd MMM yy'}}</span></span>
+                                    <span class="user-notes" ng-bind-html="note.note"></span>
+                                </div>
+                                <div class="clearfix"></div>
+                            </li>
+                         </ul>
+                    </div>
+                    <div class="panel-footer border-light">
+                        <label for="newNote"> New Note</label>
+                        <textarea id="newNote" class="form-control margin-bottom-15 autosize area-animated msd-elastic: \n;" ng-model="vm.newNote.text"></textarea>
+                        <div class="checkbox clip-check check-success margin-top-10" ng-if="vm.state.contact.details[0].emails[0].email">
+                            <input type="checkbox" id="note-editable" ng-model="vm.notesEmail.enable" >
+                            <label for="note-editable">
+                                Send New Note to Contact
+                            </label>
+                        </div>
+                        <button type="button" ng-disabled="!(vm.newNote.text)" class="btn btn-info btn-block btn-o btn-wide btn-scroll btn-scroll-top ti-plus" ng-click="vm.addNote(vm.newNote.text)">
+                            <span>Add</span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <contact-activity single-contact="true" current-page="1" num-per-page="10" contactId="{{vm.state.contactId}}"></contact-activity>
         </div>
         <div class="clearfix"></div>
     </div>
