Passes contact to activity directive

--- a/public/admin/assets/js/contact-details/contact-details.component.html
+++ b/public/admin/assets/js/contact-details/contact-details.component.html
@@ -399,7 +399,7 @@
                     </div>
                 </div>
             </div>
-            <contact-activity single-contact="true" current-page="1" num-per-page="10" contact-id="{{vm.state.contactId}}"></contact-activity>
+            <contact-activity single-contact="true" current-page="1" num-per-page="10" contact-id="{{vm.state.contactId}}" contact="vm.state.contact"></contact-activity>
         </div>
         <div class="clearfix"></div>
     </div>
