css fix for social icons

--- a/public/admin/assets/js/contact-details/contact-details.component.html
+++ b/public/admin/assets/js/contact-details/contact-details.component.html
@@ -23,9 +23,9 @@
                         <span>{{vm.state.contact.companyName || '&nbsp;'}}</span>
                         <div class="contact-social-icons">
                             <ul class="">
-                                <li>
+                                <li class="website-icon">
                                     <a>
-                                       <span class="ti-world"></span>
+                                       <span class="ti-world "></span>
                                     </a> 
                                 </li>
                                 <li>
