--- a/public/less/sections/contact-detail.less
+++ b/public/less/sections/contact-detail.less
@@ -85,6 +85,13 @@ contact-details-component{
                         border: 2px solid #fff;
                         margin-right: 5px;
                         text-align: center;
+                        vertical-align: bottom;
+                    }
+                    &.website-icon{
+                        span{
+                            font-size:35px;
+                            color: #666;
+                        }
                     }
                 }
             }
