Front end - Removed website refrence from footer

--- a/templates/snippets/index_head_scripts.jade
+++ b/templates/snippets/index_head_scripts.jade
@@ -222,6 +222,7 @@ if website
         window.indigenous.precache = window.indigenous.precache || {};
         window.indigenous.precache.siteData = window.indigenous.precache.siteData || {};
         window.indigenous.precache.siteData.linkList = !{JSON.stringify(website.linkLists)};
+        window.indigenous.precache.siteData.settings = !{JSON.stringify(website.settings)};
 
 | !{customFonts}
 | !{customCss}
