#10543 get organization name

--- a/public/admin/assets/js/contact-details/contact-details.component.html
+++ b/public/admin/assets/js/contact-details/contact-details.component.html
@@ -42,7 +42,7 @@
                             </ul>
                         </div>
                         <div class="account-info margin-top-30">
-                            <span>Account</span>: Indigenous
+                            <span>Account</span>: {{vm.state.organization.name}}
                         </div>
                     </div>
                     <div class="clearfix"></div>
