#10543 added urls as href for social icons

--- a/public/admin/assets/js/contact-details/contact-details.component.html
+++ b/public/admin/assets/js/contact-details/contact-details.component.html
@@ -24,17 +24,17 @@
                         <div class="contact-social-icons">
                             <ul class="">
                                 <li class="website-icon">
-                                    <a>
+                                    <a href="{{vm.state.contact.details[0].websites[0].website}}" target="_blank">
                                        <span class="ti-world "></span>
                                     </a> 
                                 </li>
                                 <li>
-                                    <a>
+                                    <a href="{{vm.state.contact.details[0].facebookUrl}}" target="_blank">
                                        <span class="fa fa-linkedin btn-linkedin"></span>
                                     </a> 
                                 </li>
                                 <li>
-                                    <a>
+                                    <a href="{{vm.state.contact.details[0].linkedinUrl}}" target="_blank">
                                        <span class="fa fa-facebook btn-facebook"></span>
                                     </a>
                                 </li>
