#10543 updated website url

--- a/public/admin/assets/js/contact-details/contact-details.component.html
+++ b/public/admin/assets/js/contact-details/contact-details.component.html
@@ -120,7 +120,7 @@
                                         Website URL:
                                     </span>
                                     <span class="value">
-                                        {{vm.state.contact.websiteUrl}}
+                                        {{vm.state.contact.details[0].websites[0].website}}
                                     </span>
                                 </div>
                                 <div class="details">
