--- a/templates/snippets/index_body_scripts.jade
+++ b/templates/snippets/index_body_scripts.jade
@@ -127,6 +127,7 @@ script(src='scripts/directives/ind-international-tel-number.js')
 // COMPONENTS
 script(src="scripts/directives/editor.js")
 
+script(src="scripts/directives/components/blog.js")
 script(src="scripts/directives/components/blog-teaser.js")
 script(src="scripts/directives/components/coming-soon.js")
 script(src="scripts/directives/components/contact-us.js")
@@ -140,7 +141,9 @@ script(src="scripts/directives/components/meet-team.js")
 script(src="scripts/directives/components/navigation.js")
 script(src="scripts/directives/components/products.js")
 script(src="scripts/directives/components/payment-form.js")
+script(src="scripts/directives/components/pricing-tables.js")
 script(src="scripts/directives/components/simple-form.js")
+script(src="scripts/directives/components/single-post.js")
 script(src="scripts/directives/components/social-link.js")
 script(src="scripts/directives/components/text-only.js")
 script(src="scripts/directives/components/testimonials.js")
