--- a/templates/snippets/index_body_scripts_minimized.jade
+++ b/templates/snippets/index_body_scripts_minimized.jade
@@ -7,6 +7,14 @@ script(src="../js/libs/json3/lib/json3.min.js")
 script(src="../js/indigenous.js")
 script(src="../js/ng-indigenous.js")
 
+
+-if (loadYoutubeLib)
+      script.
+        var tag = document.createElement('script');
+        tag.src = "https://www.youtube.com/iframe_api";
+        var firstScriptTag = document.getElementsByTagName('script')[0];
+        firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
 | !{userScripts}
 | !{externalScripts}
 
