--- a/templates/var/am/admin_body_scripts.jade
+++ b/templates/var/am/admin_body_scripts.jade
@@ -291,6 +291,12 @@ script(src="/admin/assets/js/site-analytics/site-analytics.service.js")
 
 script(src="../js/libs/js-marker-clusterer/src/markerclusterer.js")
 
+script.
+    var tag = document.createElement('script');
+    tag.src = "https://www.youtube.com/iframe_api";
+    var firstScriptTag = document.getElementsByTagName('script')[0];
+    firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
 if environment === 'local'
     script(type="text/javascript").
         var appId = 'ozyfh8ff';
