SSB > Background color appear differently on blog page at backend and frontend of application #10092

--- a/templates/snippets/index_head_scripts.jade
+++ b/templates/snippets/index_head_scripts.jade
@@ -162,7 +162,7 @@ if (typeof account.website.theme !== 'undefined' && typeof account.website.theme
             background-color: #{account.website.themeOverrides.styles.checkoutBtnBgColor}!important;
         }
         .ssb-page-blog-list .ssb-page-layout-row-2-col>div.col-xs-12 .ssb-section-layout, .ssb-page-blog-list .ssb-page-layout-row-2-col>div.col-xs-12{
-             background-color: #{account.website.settings.defaultBlogTemplateBgColor};
+            background-color: #{account.website.settings.defaultBlogTemplateBgColor}!important;
         }
 
         @media screen and (min-width: 768px) {
