--- a/templates/snippets/index_body_scripts_minimized_cdn.jade
+++ b/templates/snippets/index_body_scripts_minimized_cdn.jade
@@ -9,11 +9,12 @@ script(src="http://cdn-js.test.indigenous.io/js/ng-indigenous.js")
 script(src="../admin/assets/js/ssb-site-builder/ssb-components/ssb-page-section/ssb-page-section-template.component.js")
 script(src="../admin/assets/js/ssb-site-builder/ssb-components/ssb-page-section/ssb-page-section-template.controller.js")
 
-script.
-    var tag = document.createElement('script');
-    tag.src = "https://www.youtube.com/iframe_api";
-    var firstScriptTag = document.getElementsByTagName('script')[0];
-    firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+-if (loadYoutubeLib)
+      script.
+        var tag = document.createElement('script');
+        tag.src = "https://www.youtube.com/iframe_api";
+        var firstScriptTag = document.getElementsByTagName('script')[0];
+        firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
 
 | !{userScripts}
 | !{externalScripts}
