--- a/public/less/indi-email-builder/indi-email-builder.less
+++ b/public/less/indi-email-builder/indi-email-builder.less
@@ -25,6 +25,11 @@
     // }
 
 }
+.indi-email-builder-editor-container{
+    .email-builder-main {
+            overflow: hidden;
+    }
+}
 
 .email-builder-main {
     z-index: 0;
