--- a/public/admin/assets/js/ssb-site-builder/ssb-components/ssb-form-donate/ssb-form-donate.component.html
+++ b/public/admin/assets/js/ssb-site-builder/ssb-components/ssb-form-donate/ssb-form-donate.component.html
@@ -363,5 +363,9 @@
             }
             ;
         }
+
+        .form-donate-{{vm.component._id}} .element-wrap {
+            font-family: {{vm.component.formSettings.formFontFamily}}!important;
+        }
     </style>
 </div>
