--- a/public/components/simple-form_v1.html
+++ b/public/components/simple-form_v1.html
@@ -233,5 +233,8 @@
     color: {{component.formSettings.inputTextColor}};
 }
 
+.simple-form-v1 .simple-form-{{component._id}} .element-wrap{
+        font-family: {{component.formSettings.formFontFamily}}!important;
+    }
 
 </style>
