--- a/public/admin/assets/js/ssb-site-builder/ssb-components/ssb-form-builder/ssb-form-builder.v3.component.html
+++ b/public/admin/assets/js/ssb-site-builder/ssb-components/ssb-form-builder/ssb-form-builder.v3.component.html
@@ -291,5 +291,8 @@
         .form-builder-{{vm.component._id}} :-ms-input-placeholder {
             color: {{vm.component.formSettings.inputTextColor}};
         }
+        .form-builder-{{vm.component._id}} .element-wrap {
+            font-family: {{vm.component.formSettings.formFontFamily}}!important;
+        }
     </style>
 </div>
