--- a/public/admin/assets/js/ssb-site-builder/ssb-components/ssb-page-section/ssb-page-section.component.html
+++ b/public/admin/assets/js/ssb-site-builder/ssb-components/ssb-page-section/ssb-page-section.component.html
@@ -2,7 +2,7 @@
     <section
         ng-show="vm.showSection(vm.section)"
         id="section_{{vm.section._id}}"
-        class="ssb-check-fixed ssb-section-layout ssb-section-section ssb-section-type-{{vm.section.components[0].type}} {{vm.sectionClass(vm.section)}}"
+        class="ssb-section-layout ssb-section-section ssb-section-type-{{vm.section.components[0].type}} {{vm.sectionClass(vm.section)}}"
         ng-attr-style="{{vm.sectionStyle(vm.section)}}"
         ng-class="{'section-background-overlay': vm.section.bg.img.overlay}">
 
