--- a/public/less/frontend/components/social-link-v1.less
+++ b/public/less/frontend/components/social-link-v1.less
@@ -4,6 +4,13 @@
 div[data-type="social-link"] .inner-page {
   padding: 0;
 }
+.ssb-page-section-layout-header-v1 {
+    [social-link-component]{
+        div.component.inner-component-style {
+         margin-top: 0px !important;
+       }
+    }
+}
 [social-link-component]{
     div.component.inner-component-style {
         margin-top: 35px;
@@ -19,7 +26,7 @@ div[data-type="social-link"] .inner-page {
       ul {
           text-align: center;
           padding-left: 0;
-          margin-bottom: 20px; 
+          margin-bottom: 20px;
           li.editable-title{
               width: auto !important;
               height: auto !important;
