--- a/public/less/ssb-site-builder/ssb-sections/ssb-header.less
+++ b/public/less/ssb-site-builder/ssb-sections/ssb-header.less
@@ -151,12 +151,13 @@
 
     .ssb-media-query-medium({
         .ssb-page-section-layout-header-v1 .social-link-v1 .social-link ul {
-            padding-top: 1em!important;
+            padding-top: 0em!important;
             margin-bottom: 0!important;
         }
     });
-
-
+    .ssb-page-section-layout-header-v1 {
+      [social-link-component] div.component.inner-component-style { margin-top: 10px !important; }
+    }
     // .ssb-media-query-medium({
     //     .ssb-page-section-layout-header-fixed {
     //         position: fixed;
