support footer issue

--- a/templates/snippets/index_head_scripts.jade
+++ b/templates/snippets/index_head_scripts.jade
@@ -189,7 +189,7 @@ if pageStyles
             background-color: #{pageStyles.bodyBackgroundColor}!important;
         }
         .ssb-theme-#{account.website.theme.handle} .ssb-section-layout {
-            background-color: #{pageStyles.bodyBackgroundColor}!important;
+            background-color: #{pageStyles.bodyBackgroundColor};
         }
         .ssb-theme-#{account.website.theme.handle} .ssb-page-section-layout-header {
             background-color: #{pageStyles.headerBackgroundColor}!important;
