Fix alignment/arrangement of email/phone in top-bar-v1

--- a/public/less/frontend/components/top-bar-v1.less
+++ b/public/less/frontend/components/top-bar-v1.less
@@ -30,7 +30,6 @@
 
     .hour-block .navbar-text.navbar-right, .phone-block .navbar-text.navbar-right{
         .fa-lg{
-            vertical-align: top;
             margin-top: 1px;
         }
     }
@@ -88,6 +87,7 @@
 
             @media screen and (min-width: 690px) {
                 margin-left: 15px;
+                margin-top: 5px;
             }
 
         }
@@ -122,7 +122,7 @@
         min-width: 125px;
         min-height: 50px;
         &:hover {
-                
+
             .left-block {
                 border: 3px dashed rgba(0, 0, 0, 0.4);
                 padding-right: 28px;
