--- a/public/less/ssb-site-builder/ssb-sections/ssb-header.less
+++ b/public/less/ssb-site-builder/ssb-sections/ssb-header.less
@@ -734,17 +734,19 @@
         .ssb-media-query-small-only({
             .ssb-component.ssb-ssb-text{
                 width: 80% !important;
-                float: left;
-                position: absolute;
+                float: left; 
                 top: 0px;
             }
             .navbar-collapse{
                 width: 100%!important;
             }
             .ssb-component.ssb-navigation{
-                float: unset;
+                float: right;
                 width: unset;
                 min-height: 75px !important;
+            }
+            .o-open.ssb-component.ssb-navigation{
+                float: unset; 
             }
         });
         [social-link-component]{
